# web-app-hub

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json  install-browsers.sh
.github/workflows/: release-deps.sh  release.yml
assets/: app.metainfo.xml
assets/config/browsers/: brave.yml  chrome.yml  chromium.yml  firefox-esr.yml  firefox.yml  floorp.yml  librewolf.yml  ungoogled-chromium.yml  vivaldi.yml  zen.yml
assets/config/desktop-files/: librewolf.desktop
assets/config/profiles/librewolf/: user.js
assets/desktop/: org.pvermeer.WebAppHub.desktop  org.pvermeer.WebAppHub.metainfo.xml
dev-assets/custom-browsers/browsers/: chromium-shared.yml  firefox-shared.yml
dev-assets/custom-browsers/desktop-files/: chromium-shared.desktop  firefox-shared.desktop
dev-assets/desktop-files/: com.brave.Browser.brave-wah-66dseuYB.desktop  com.brave.Browser.brave-wah-CiEwEaZj.desktop  com.brave.Browser.brave-wah-KS0bPPyY.desktop  com.brave.Browser.brave-wah-gV8GERCK.desktop  com.brave.Browser.brave-wah-iwMWG76T.desktop  com.brave.Browser.brave-wah-tkrs3UaN.desktop  com.brave.Browser.brave-wah-yitI4Crv.desktop  org.chromium.Chromium.chromium-wah-RZiqWlXu.desktop  org.chromium.Chromium.chromium-wah-sjDPvuAd.desktop  org.mozilla.firefox.firefox-wah-Hklq4sJp.desktop  org.mozilla.firefox.firefox-wah-Rr9nVycb.desktop
flatpak/: build.sh  manifest.in  org.pvermeer.WebAppHub.Devel.yml  org.pvermeer.WebAppHub.yml
workspaces/app/: Cargo.toml  build.rs
workspaces/app/credits/: translations.yml
workspaces/app/locales/: nl.yml
workspaces/app/src/: application.rs  main.rs
workspaces/app/src/application/: error_dialog.rs  icon_theme.rs  window.rs
workspaces/app/src/application/pages/: browsers.rs  home.rs  info.rs  web_apps.rs
workspaces/app/src/application/pages/web_apps/: web_app_view.rs
workspaces/app/src/application/pages/web_apps/web_app_view/: icon_picker.rs  optional_settings.rs
workspaces/app/src/application/pages/web_apps/web_app_view/icon_picker/: icon.rs  icon_fetcher.rs
workspaces/app/src/application/window/: view.rs
workspaces/app/src/application/window/view/: about.rs  app_menu.rs  sidebar_page.rs
workspaces/app/translations/: de.yml  en.yml  es.yml  it.yml  nl.yml
workspaces/common/: Cargo.toml  build.rs
workspaces/common/src/: app_dirs.rs  assets.rs  browsers.rs  cache_settings.rs  config.rs  desktop_file.rs  fetch.rs  lib.rs  utils.rs
workspaces/common/src/desktop_file/: category.rs  error.rs  key.rs  utils.rs
workspaces/tools/: Cargo.toml
workspaces/tools/src/: release.rs
