[package]
name = "app"
version = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "web-app-hub"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
common = { workspace = true }
freedesktop-desktop-entry = { workspace = true }
gtk = { workspace = true }
include_dir = { workspace = true }
libadwaita = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
rust-i18n = { workspace = true }
sanitize-filename = { workspace = true }
scraper = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ureq = { workspace = true }
url = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
common = { workspace = true }
