[package]
name = "app"
version = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "web-app-hub"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
common = { workspace = true }
gtk = { workspace = true }
libadwaita = { workspace = true }
rust-i18n = { workspace = true }
sanitize-filename = { workspace = true }
scraper = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
common = { workspace = true }
fs_extra = { workspace = true}
