[package]
name = "common"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
freedesktop-desktop-entry = { workspace = true }
fs_extra = { workspace = true}
gtk = { workspace = true }
include_dir = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
semver = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
ureq = { workspace = true }
url = { workspace = true }
